# gwm-autotiler

./: CMakeLists.txt  README.md
.github/workflows/: release.yml
src/: main.cpp
